# xiaoy_md

./: .dockerignore  .env.example  .env.production.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  AGENTS.md  Dockerfile  Dockerfile.base  Makefile  README.md  docker-compose.yml  package-lock.json  protect.json  pyproject.toml  test_error.py  test_precommit.py
.bmad-core/: core-config.yaml  install-manifest.yaml
.bmad-core/agents/: qa.md
.bmad-core/workflows/: brownfield-fullstack.yaml  brownfield-service.yaml  brownfield-ui.yaml  greenfield-service.yaml  greenfield-ui.yaml
.bmad-infrastructure-devops/: install-manifest.yaml
.github/workflows/: ci.yml
config/: nats-server.conf
config/prometheus/: prometheus.yml
docs/: architecture.md  nats-auth-simple.md  prd.md  project_brief.md  quality-gates.md  quality-verification-report.md  sprint-change-proposal-ctp-smoke-before-2.2.md  sprint-change-proposal-production-ops.md
docs/architecture/: coding-standards.md  components.md  core-workflows.md  data-models.md  database-schema.md  error-handling-strategy.md  external-apis.md  high-level-architecture.md  index.md  infrastructure-and-deployment.md  introduction.md  observability-and-ops.md  rest-api-spec.md  security.md  source-tree.md  tech-stack.md  test-strategy-and-standards.md
docs/ops/: monitoring-dashboard.md  operations-console-spec.md  production-runbook.md  subscription-check.md
docs/perf/: soak-runbook.md  story-2.5-performance-report.md
docs/prd/: checklist-results-report-核对清单结果报告.md  epics-史诗.md  goals-and-background-context.md  index.md  requirements-要求.md  technical-assumptions-技术假设.md
docs/qa/assessments/: 1.1-risk-20250903.md  1.1-test-design-20250903.md  1.1-trace-20250903-v2.md  1.1-trace-20250903-v3.md  1.1-trace-20250903-v4.md  1.1-trace-20250903.md  1.2-risk-profile.md  1.2-test-design.md  1.2-trace-20250904.md  1.3-nfr-20250904.md  1.3-risk-20250904.md  1.3-test-design-20250904.md  1.3-trace-20250904.md  1.3-trace-20250905.md  1.4-nfr-20250905.md  1.4-risk-20250905.md  1.4-test-design-20250905.md  1.4-trace-20250905.md  1.5-risk-20250905.md  1.5-test-design-20250905.md  1.5-trace-20250905-ultrathink.md  2.1-risk-20250908.md  2.1-test-design-20250908.md  2.1-trace-20250908.md  2.2-nfr-20250109.md  2.2-risk-20250109.md  2.2-test-design-20250109.md  2.2-trace-20250109.md
docs/qa/gates/: 1.2-code-quality-ci-pipeline.yaml  1.2-code-quality-ci-pipeline.yml  1.3-runnable-application-shell.yml  1.4-service-dockerization.yml  1.5-nats-health-check-ultrathink.yml  2.1-ctp-gateway-adapter-implementation.yml  2.1a-ctp-real-connectivity.yml  2.4.1-live-ingest-publishes-to-nats.yml  2.4.7-live-smoke.yml  3.1-production-environment-orchestration.yml  3.2-environment-variables-secrets-governance.yml  3.3-market-data-monitoring-dashboards.yml  3.4-subscription-health-checks-recovery.yml  3.5-multi-account-feed-failover-readiness.yml  3.6-operations-monitoring-console-ui.yml  3.7-ops-console-compose-runtime-integration.yml
docs/qa/improvements/: 1.1-architecture-validation.md  1.1-environment-consistency.md  1.1-team-onboarding.md
docs/qa/notes/: 2025-09-22-start_live_env_operational_risk.md
docs/stories/: 1.1.story.md  1.2.story.md  1.3.story.md  1.4.story.md  1.5.story.md  2.1.story.md  2.1a.story.md  2.2.story.md  2.3.story.md  2.4.1.story.md  2.4.2.story.md  2.4.3.story.md  2.4.4.story.md  2.4.5.story.md  2.4.6.story.md  2.4.7.story.md  2.4.story.md  2.5.story.md  3.1.story.md  3.2.story.md  3.3.story.md  3.4.story.md  3.5.story.md  3.6.story.md  3.7.story.md
references/: core.py  ctp_gateway.py  ddd_50_keywords.md  ddd_prompt.md  docker_dev.md  sopt_gateway.py  vnpy-integration-best-practices.md
scripts/: check_architecture.py  ci-local.sh  ctp_bridge_smoke.py  ctp_connect_smoke.py  demo_e2e_tick_to_nats.py  diag_live_connector.py  ingest_e2e_smoke.py  live_ctp_observability_check.py  live_ingest_verify.sh  live_tick_subscriber.py  nats_smoke_check.py  onboard.py  run_e2e_tick_demo.sh  run_live_test.sh  setup.sh  start_live_ingest.sh  test_bulk_subscribe.py  test_contracts_list.py
scripts/consumers/: tick_jsonl_consumer.py
scripts/operations/: __init__.py  alert_smoke.py  check_feed_health.py  full_feed_subscription.py  run_drill_tests.sh  run_ops_api.py  start_live_env.sh  validate_env.py
scripts/perf/: full_feed_soak.py  nats_throughput_probe.py
src/: __init__.py  __main__.py  config.py  main.py
src/adapters/: __init__.py
src/application/: observability.py  ops_console.py  prometheus_client.py  services.py
src/domain/: models.py  ports.py
src/infrastructure/: ctp_adapter.py  ctp_live_connector.py  nats_publisher.py  rpc_nats.py
src/infrastructure/http/: __init__.py  ops_api.py
src/operations/: __init__.py  check_feed_health.py  full_feed_subscription.py
tests/: __init__.py  conftest.py  test_app_runtime.py  test_ci_operational.py  test_docker_build.py  test_docker_security.py  test_docker_vulnerability.py  test_documentation.py  test_setup.py  test_type_checking_demo.py
tests/integration/: __init__.py  conftest.py  fake_ctp_connector.py  test_ctp_adapter_integration.py  test_ctp_live_adapter.py  test_end_to_end_market_tick_flow.py  test_live_ingest_entrypoint.py  test_nats_auth.py  test_nats_health_check.py  test_nats_rpc_control_plane.py  test_ops_api.py  test_precommit_hooks.py  test_setup_script.py
tests/unit/: __init__.py  test_config_security.py  test_ctp_adapter.py  test_ctp_live_connector_safety.py  test_ctp_live_connector_unit.py  test_domain_models.py  test_ingest_main_entry.py  test_main.py  test_main_integration.py  test_main_pytest_shutdown.py  test_market_data_service_flow.py  test_market_data_subject_and_payload.py  test_nats_publisher.py  test_nats_publisher_unit.py  test_observability_metrics.py  test_onboarding.py  test_operations_rate_limiter.py  test_rate_limiter.py  test_tick_ingest_service.py
ui/operations-console/: .env.example  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  tsconfig.playwright.json  vite.config.ts
(+46 files in other folders)
